05-devops/kubernetes/ejercicios/proyectos/microservicios-k8s/solucion/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tienda-online
  labels:
    app: tienda
    entorno: aprendizaje
